--- a/index.html
+++ b/index.html
@@ -1,12 +1,91 @@
-HTML
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xenia</title>
+
+    <link rel="stylesheet" href="./structure.css">
+    <link rel="stylesheet" href="./menu.css">
+
+    <link rel="icon" type="image/png" href="./favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="./favicon/favicon.svg" />
+    <link rel="shortcut icon" href="./favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="./favicon/site.webmanifest" />
 </head>
 <body>
-    <p>Ici c'est le site de Xenia</p>
+
+<div class="PANEL">
+	<div class="KUENSTLERIN">
+		<h1 class="name">Xenia&nbsp;Morgun</h1>
+        
+	</div>
+	<nav>
+		<menu>
+			<li><a href="index.html">HOME</a></li>
+			<li><a href="cv.html" target="_blank">CV</a></li>
+			<li>IMPRESSUM</li>
+		</menu>
+	</nav>
+</div>
+<div class="PANEL" style="height: 50px;"></div> <!-- Abstand -->
+<main class="PANEL">
+    
+    <p>
+        <span style="margin: 15px;
+                     display: inline;
+	                 position: relative;
+                     float: left;">
+            <img src="portrait5.png" style="width: 200px; border-radius: 30%;">
+        </span>
+        Bla bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla        
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla         
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla         
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla        
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+        bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
+    </p>
+</main>
+
+<footer>
+	<p>© 2025 X. Morgun</p>
+</footer>
+
 </body>
 </html>
