corrections in html and language section in CV

--- a/cv.html
+++ b/cv.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curiculum Vitae</title>
 
-    <link rel="icon" type="image/png" href="./favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="./favicon/favicon.svg" />
-    <link rel="shortcut icon" href="./favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="./favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="./favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="./favicon/favicon.svg">
+    <link rel="shortcut icon" href="./favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
 
     <style>
         hr.bar {
             border: 2px solid rgb(163,215,215);
             border-radius: 1px;
+        }
+        table.bar {
+            height: 4px;
+            border-collapse: collapse;
+            border-radius: 1px;
+        }
+        table.bar td.e {
+            background-color: ghostwhite;
+        }
+        table.bar td.f {
+            background-color: rgb(163,215,215);
         }
     </style>
 </head>
@@ -81,6 +92,21 @@
                     <li>Critical thinking</li>
                     <li>Organizational skills</li>
                 </ul>
+                <h3>LANGUAGES</h3>
+                <div style="padding-left: 0; line-height: 160%;">
+                    <p>French</p>
+                    <table class="bar" style="width: 100%;"><tr><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="e"></td><td class="e"></td></tr></table>
+                    <p>English</p>
+                    <table class="bar" style="width: 100%;"><tr><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="e"></td><td class="e"></td><td class="e"></td><td class="e"></td></tr></table>
+                    <p>Romanian</p>
+                    <table class="bar" style="width: 100%;"><tr><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td></tr></table>
+                    <p>Russian</p>
+                    <table class="bar" style="width: 100%;"><tr><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td></tr></table>
+                    <p>Portuguese</p>
+                    <table class="bar" style="width: 100%;"><tr><td class="f"></td><td class="f"></td><td class="e"></td><td class="e"></td><td class="e"></td><td class="e"></td><td class="e"></td><td class="e"></td><td class="e"></td><td class="e"></td></tr></table>
+                    <p>German</p>
+                    <p>"Danke schön!"</p>
+                </div>
             </td>
             <td style="width: 450px; vertical-align: top; padding-left: 1em; padding-right: 1em; background-color: white;">
                 <h3><span style="background-color: rgb(163,215,215); color: white;">&nbsp;PROFILE&nbsp;</span></h3>
