--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./structure.css">
     <link rel="stylesheet" href="./menu.css">
 
-    <link rel="icon" type="image/png" href="./favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="./favicon/favicon.svg" />
-    <link rel="shortcut icon" href="./favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="./favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="./favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="./favicon/favicon.svg">
+    <link rel="shortcut icon" href="./favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
 </head>
 <body>
 
@@ -37,7 +37,7 @@
                      display: inline;
 	                 position: relative;
                      float: left;">
-            <img src="portrait5.png" style="width: 200px; border-radius: 30%;">
+            <img src="portrait5.png" style="width: 200px; border-radius: 30%;" alt="">
         </span>
         Bla bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
         bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla  bla 
