--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curiculum Vitae</title>
 
+    <meta name="format-detection" content="telephone=no">
+
     <link rel="icon" type="image/png" href="./favicon/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/svg+xml" href="./favicon/favicon.svg">
     <link rel="shortcut icon" href="./favicon/favicon.ico">
@@ -14,12 +16,10 @@
     <style>
         hr.bar {
             border: 2px solid rgb(163,215,215);
-            border-radius: 1px;
         }
         table.bar {
             height: 4px;
             border-collapse: collapse;
-            border-radius: 1px;
         }
         table.bar td.e {
             background-color: ghostwhite;
