--- a/cv.html
+++ b/cv.html
@@ -95,15 +95,15 @@
                 <h3>LANGUAGES</h3>
                 <div style="padding-left: 0; line-height: 160%;">
                     <p>French</p>
-                    <table class="bar" style="width: 100%;"><tr><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="e"></td><td class="e"></td></tr></table>
+                    <table class="bar" style="width: 100%;"><tr><td class="f" style="width: 80%;"></td><td class="e"></td></tr></table>
                     <p>English</p>
-                    <table class="bar" style="width: 100%;"><tr><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="e"></td><td class="e"></td><td class="e"></td><td class="e"></td></tr></table>
+                    <table class="bar" style="width: 100%;"><tr><td class="f" style="width: 60%;"></td><td class="e"></td></tr></table>
                     <p>Romanian</p>
-                    <table class="bar" style="width: 100%;"><tr><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td></tr></table>
+                    <table class="bar" style="width: 100%;"><tr><td class="f" style="width: 50%;"></td><td class="f"></td></tr></table>
                     <p>Russian</p>
-                    <table class="bar" style="width: 100%;"><tr><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td><td class="f"></td></tr></table>
+                    <table class="bar" style="width: 100%;"><tr><td class="f" style="width: 50%;"></td><td class="f"></td></tr></table>
                     <p>Portuguese</p>
-                    <table class="bar" style="width: 100%;"><tr><td class="f"></td><td class="f"></td><td class="e"></td><td class="e"></td><td class="e"></td><td class="e"></td><td class="e"></td><td class="e"></td><td class="e"></td><td class="e"></td></tr></table>
+                    <table class="bar" style="width: 100%;"><tr><td class="f" style="width: 20%;"></td><td class="e"></td></tr></table>
                     <p>German</p>
                     <p>"Danke schön!"</p>
                 </div>
