additional paragraph in my cv

--- a/cv.html
+++ b/cv.html
@@ -118,6 +118,11 @@
                 </p>
                 <h3><span style="background-color: rgb(163,215,215); color: white;">&nbsp;EDUCATION&nbsp;</span></h3>
                 <p style="text-align: justify; color: rgb(14, 14, 34);">
+                    I have worked extensively on a variety of projects, from Moldova to Belgium,
+                    bringing a keen eye for detail and a passion for
+                </p>
+                <h3><span style="background-color: rgb(163,215,215); color: white;">&nbsp;EMPLOYMENT&nbsp;</span></h3>
+                <p style="text-align: justify; color: rgb(14, 14, 34);">
                     ...
                 </p>
             </td>
