simple comment in html markup

--- a/cv.html
+++ b/cv.html
@@ -108,6 +108,7 @@
                     <p>"Danke schön!"</p>
                 </div>
             </td>
+            <!-- the white text area -->
             <td style="width: 450px; vertical-align: top; padding-left: 1em; padding-right: 1em; background-color: white;">
                 <h3><span style="background-color: rgb(163,215,215); color: white;">&nbsp;PROFILE&nbsp;</span></h3>
                 <p style="text-align: justify; color: rgb(14, 14, 34);">
